--- a/python.yml
+++ b/python.yml
@@ -2,7 +2,7 @@
   become: yes
   tasks:
      - name: execute the pythonscript
-       command: '162.70.211.66/ansible/samplepython.py'
+       command: '/ansible/samplepython.py'
        register: find_output
      - debug:
           var: find_output
